minor z-index issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,7 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  z-index: 4;
 }
 form {
   display: flex;
